2016-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anydate, utcdate): Ensure Date object is returned

2016-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simpleTests.R: More tests
	* tests/gh_issue_5.R: Idem

2016-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* tests/allFormats.R: Significantly increased number of tests

2016-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* tests/bulkTest.R: Improved testing for POSIXct and Date
	* tests/gh_issue_12.R: Additional testing

2016-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* src/anytime.cpp (anytime_cpp): New option asDate
	(convertToTime): Idem
	(stringToTime): Idem
	(ptToDoubleUTC): Idem
	(ptToDouble): Idem

	* R/anytime.R (anydate): Now calls anytime_cpp with asDate=TRUE
	(utcdate): Idem

	* tests/allFormats.R: Minor fix, additional call

	* tests/bulkTest.R (fullEx): New bulk formatting test

2016-12-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (sformats[]): Add ISO8601 format

	* tests/allFormats.R: Tests for ISO8601 format

2016-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2

2016-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (isAtLeastGivenLengthAndAllDigits): Simplified
	using Boost classification and predicate use

2016-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (format): Condition only on Rcpp version

	* tests/utilities.R: Call anytime:::format()

2016-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll version and date

	* src/anytime.cpp (stringSplitter): Correct small oversight and split
	on actual 'spliton' argument

	* tests/gh_issue_33.R: Added to test most of GH issue
	* tests/allFormats.R: Minor edit

2016-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (stringSplitter): Split string with
	boost::algorithm instead of strtok which appears to fail on 64-bit
	windows.
