@@ -43,3 +43,11 @@ stopifnot(refPt == anytime(c("Thu Jan 01 10:11:12 2016", "Thu Jan 01 10:11:12.34
 anytime(c("2016-01-31 12:13:14", "2016-08-31 12:13:14"))
 anytime(c("2016-01-31 12:13:14", "2016-08-31 12:13:14"), tz="UTC")  # important: catches change
 
+
+iso8601(anytime("2016-Sep-01 10:11:12"))
+iso8601(anydate("2016-Sep-01"))
+iso8601("this won't work")
+
+rfc3339(anytime("2016-Sep-01 10:11:12"))
+rfc3339(anydate("2016-Sep-01"))
+rfc3339("this won't work")
